--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "List of Historic Designated Districts in the City of Detroit.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html --https --no-cache --no-source-maps -p 3000",
+    "build": "parcel build index.js --no-cache --public-url '.' --no-source-maps -d build"
   },
   "repository": {
     "type": "git",
@@ -21,16 +22,16 @@
   },
   "homepage": "https://github.com/CityOfDetroit/historic-districts-#readme",
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^2.3.0",
+    "@mapbox/mapbox-gl-geocoder": "^4.5.1",
     "@turf/simplify": "^5.1.5",
-    "mapbox-gl": "^0.49.0",
-    "moment": "^2.22.2",
+    "mapbox-gl": "^1.7.0",
+    "moment": "^2.24.0",
     "terraformer-arcgis-parser": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "cssnano": "^4.1.7",
-    "sass": "^1.15.1"
+    "cssnano": "^4.1.10",
+    "sass": "^1.25.0"
   }
 }
